Added denied access to failed login attempt

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-brute": "^1.0.1",
+    "express-brute-memcached": "^0.0.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.7",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
