--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "express-brute": "^1.0.1",
-    "express-brute-memcached": "^0.0.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
-    "moment": "^2.29.1",
     "mongoose": "^6.1.7",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
